<resources>
    <string name="app_name">FILS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nova_atividade">Nova Atividade</string>
    <string name="historico">Histórico</string>
    <string name="agendamento">Agendamento</string>
    <string name="metas">Metas</string>
    <string name="atleta">Atleta</string>
    <string name="personal_trainer">Personal Trainer</string>
    <string name="nutricionista">Nutricionista</string>
    <string name="saude">Saúde</string>
    <string name="login_anonimo">Login Anônimo</string>
    <string name="facebook_app_id">1788944334653874</string>
    <string name="fb_login_protocol_scheme">fb1788944334653874</string>
    <string name="server_client_id">483455833341-l7phs7t40cqp0i7vpli42c05p1rd09dv.apps.googleusercontent.com</string>
	<string name="digite_email_aluno">Digite o email do aluno procurado</string>
    
    <string-array name="metas_escolher">
        <item>Sarado</item>
        <item>Gostoso</item>
        <item>Delicia</item>
        <item>Gordinho Gostoso</item>
        <item>Vem ni mim gata</item>
    </string-array>

    <string-array name="outros_esportes">
        <item>Spinning</item>
        <item>Ritmos</item>
        <item>Jump</item>
        <item>Pilates</item>
        <item>Step</item>
        <item>Judô</item>
        <item>Jiu-Jitsu</item>
        <item>Muay Thay</item>
        <item>MMA</item>
        <item>Outra</item>
    </string-array>

    <string-array name="grupos_musculares">
        <item>Bíceps</item>
        <item>Tríceps</item>
        <item>Antebraço</item>
        <item>Costas</item>
        <item>Lombar</item>
        <item>Peito</item>
        <item>Ombros</item>
        <item>Quadríceps</item>
        <item>Posterior</item>
        <item>Glúteos</item>
        <item>Panturrilhas</item>
        <item>Abdominais</item>
    </string-array>
    
    <string-array name="biceps">
        <item>Rosca Alternada</item>
        <item>Rosca Concentrada</item>
        <item>Rosca Direta com Barra</item>
        <item>Rosca Direta com Haltere</item>
        <item>Rosca Scott com Barra</item>
        <item>Rosca Scott com Haltere</item>
        <item>Rosca Scott Unilateral</item>
        <item>Rosca em Polia Baixa</item>
        <item>Rosca em Polia Alta</item>
    </string-array>

    <string-array name="triceps">
        <item>Tríceps na Polia em Pronação</item>
        <item>Tríceps na Polia em Suinação</item>
        <item>Tríceps na Polia com Corda</item>
        <item>Tríceps Coice (Kickback)</item>
        <item>Tríceps Testa Sentado</item>
        <item>Tríceps Testa Deitado</item>
        <item>Extensão Sobre a Cabeça</item>
        <item>Paralelas</item>
        <item>Fundos em Máquina</item>
        <item>Supino Pegada Junta</item>
        <item>Extensão de Tríceps Sentado com Haltere</item>
    </string-array>

    <string-array name="antebraco">
        <item>Rosca com Barra em Pronação</item>
        <item>Rosca com Halter em Semi-Pronação (Martelo)</item>
        <item>Flexão dos Punhos em Pronação</item>
        <item>Flexão dos Punhos em Pronação</item>
    </string-array>

    <string-array name="costas">
        <item>Remada Curvada em Pronação</item>
        <item>Remada Curvada em Supinaçãoo</item>
        <item>Remada com Barra em T</item>
        <item>Remada Sentado</item>
        <item>Remada Unilateral na Máquina</item>
        <item>Remada Unilateral com Haltere</item>
        <item>Puxador a Frente em Pronação</item>
        <item>Puxador a Frente em Supinação</item>
        <item>Extensão da Coluna</item>
        <item>Encolhimento de Ombros com Haltere</item>
        <item>Levantamento Terra</item>
        <item>Encolhimento de Ombros com Barra</item>
        <item>Barra Fixa</item>
    </string-array>

    <string-array name="lombar">
        <item>Hiperextensão em Banco</item>
        <item>Super-Homem</item>
    </string-array>

    <string-array name="peito">
        <item>Supino com Barra</item>
        <item>Supino com Haltere</item>
        <item>Voador</item>
        <item>Peck Deck</item>
        <item>Crucifixo</item>
        <item>Crucifixo Inclinado</item>
        <item>Crucifixo Declinado</item>
        <item>Crucifixo na Polia</item>
        <item>Crucifixo em Pé na Polia</item>
        <item>Supino Inclinado com Barra</item>
        <item>Supino Inclinado com Haltere</item>
        <item>Supino Declinado com Barra</item>
        <item>Supino Declinado com Haltere</item>
        <item>Pullover</item>
        <item>Crossover</item>
    </string-array>

    <string-array name="ombros">
        <item>Desenvolvimento para Frente com Barra</item>
        <item>Desenvolvimento para Trás com Haltere</item>
        <item>Desenvolvimento para Frente com Haltere</item>
        <item>Elevação Lateral na Máquina</item>
        <item>Elevação Lateral com Haltere</item>
        <item>Elevação Lateral curvado com Haltere</item>
        <item>Remada Alta</item>
        <item>Elevação Frontal com Barra</item>
        <item>Elevaçao Frontal com Haltere em Pronação</item>
        <item>Elevação Frontal com Haltere em Supinação</item>
    </string-array>

    <string-array name="quadriceps">
        <item>Agachamento</item>
        <item>Agachamento Frontal</item>
        <item>Agachamento Hack em Máquina</item>
        <item>Extensora</item>
        <item>Avanço</item>
        <item>Leg Press 45</item>
        <item>Leg Press 90</item>
        <item>Leg Press Horizontal</item>
        <item>Levantamento Terra</item>
    </string-array>

    <string-array name="posterior">
        <item>Stiff</item>
        <item>Flexora Deitada</item>
        <item>Flexora Sentada</item>
    </string-array>
    
    <string-array name="gluteos">
        <item>Step-up</item>
        <item>Extensão do Quadril em Polia Baixa</item>
        <item>Extensão do Quadril no Solo</item>
        <item>Extensão do Quadril com Pés no Chão</item>
    </string-array>

    <string-array name="panturrilhas">
        <item>Elevação de Calcanhar em pé</item>
        <item>Elevação de Calcanhar Sentado</item>
        <item>Elevação de Calcanhar em Máquina</item>
        <item>Burrinho</item>
    </string-array>

    <string-array name="abdominais">
        <item>Elevação de Pernas</item>
        <item>Crunch</item>
        <item>Obliquo</item>
        <item>Troque nos Pés</item>
        <item>Flexão do Quadril Suspenso em Barra Fixa</item>
        <item>Flexão do Quadril em Banco Inclinado</item>
        <item>Abdominal em Banco Inclinado</item>
        <item>Abdominal em Polia Alta</item>
        <item>Prancha</item>
        <item>Prancha Lateral</item>
    </string-array>

    <string-array name="profissionais">
        <item>Personal</item>
        <item>Nutricionista</item>
    </string-array>

    <string-array name="nada">
        <item>Atleta</item>
    </string-array>

    <string-array name="grupos_alimentares">
        <item>Cereais e derivados</item>
        <item>Verduras, hortaliças e derivados</item>
        <item>Gorduras e óleos</item>
        <item>Pescados e frutos do mar</item>
        <item>Carnes e derivados</item>
        <item>Leite e derivados</item>
        <item>Bebidas (alcoólicas e não alcoólicas)</item>
        <item>Ovos e derivados</item>
        <item>Produtos açucarados</item>
        <item>Miscelâneas</item>
        <item>Alimentos preparados</item>
        <item>Leguminosas e derivados</item>
        <item>Nozes e sementes</item>
    </string-array>
	
	<string name="nome">Nome:</string>
    <string name="diabetes">Diabetes</string>
    <string name="hipertensao">Hipertensão</string>
    <string name="aterosclerose">Aterosclerose</string>
    <string name="avc">Teve AVC</string>
    <string name="iam">IAM</string>
    <string name="rins">Doença Renal</string>
    <string name="figado">Doença do Fígado</string>
    <string name="tireoide">Doença de Tireóide</string>

    <string name="glicose">Glicose</string>
    <string name="colesterol">Colesterol</string>
    <string name="triglicerideo">Triglicerídeo</string>
    <string name="creatinina">Createnina</string>
    <string name="acido_urico">Ácido úrico</string>

    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="quanto_tempo">Há quanto tempo?</string>


    <string name="cirurgia">Cirurgia vascular ou cardíaca</string>
    <string name="morte_subita">Morte súbita antes dos 55 anos (para homens) ou antes dos 65 anos (para mulheres)</string>


    <string name="tontura">Tontura ou desmaio</string>
    <string name="dor">Dor intensa nas pernas</string>
    <string name="inchaco">Inchaço nas pernas</string>
    <string name="falta_ar">Falta de ar</string>
    <string name="taquicardia">Taquicardia</string>
    <string name="falta_ar_deita">Falta de ar quando deita</string>
    <string name="apneia">Apneia do sono</string>


    <string name="outra">Outra</string>
    <string name="qual">Qual?</string>

    <string name="salvar">Salvar</string>
    <string name="proximo">Próximo</string>


</resources>
