<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="1">


    <TextView
        android:id="@+id/txt_repouso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="No último mês de repouso, você sentiu:"
        android:textColor="@color/escuro"
        android:textSize="25sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/tontura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tontura"
        android:textSize="18dp"/>

    <CheckBox
        android:id="@+id/dor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dor"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/inchaco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inchaco"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/falta_ar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/falta_ar"
        android:textSize="18dp"/>

    <CheckBox
        android:id="@+id/taquicardia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taquicardia"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/falta_ar_deita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/falta_ar_deita"
        android:textSize="18dp"/>

    <CheckBox
        android:id="@+id/apneia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apneia"
        android:textSize="18dp"/>

    <!--
    <RadioGroup
        android:id="@+id/radio_repouso"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </RadioGroup>

-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="125dp">


        <Button
            android:id="@+id/salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/botao"
            android:elevation="4dp"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:textColor="#fff"
            android:text="@string/salvar"
            android:layout_weight="1"
            android:textSize="12dp"/>


    </LinearLayout>


</LinearLayout>