<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
   >


    <TextView
        android:id="@+id/txt_problema_de_saude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="Você possui algum problema de saúde?"
        android:textColor="@color/escuro"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/diabetes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diabetes"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/hipertensao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hipertensao"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/aterosclerose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aterosclerose"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/avc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avc"
        android:textSize="18dp"/>

    <CheckBox
        android:id="@+id/iam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iam"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/renal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rins"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/figado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/figado"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/tireoide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tireoide"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/outra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outra"
        android:textSize="18dp"/>

    <!--
    <RadioGroup
        android:id="@+id/radio_problema_de_saude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


    </RadioGroup>
-->





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">


        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/qual"
                android:textSize="20dp"
                android:textColor="#000000"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/qual"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </RelativeLayout>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/botao"
                android:elevation="4dp"
                android:paddingLeft="55dp"
                android:paddingRight="55dp"
                android:textColor="#fff"
                android:text="@string/salvar"
                android:layout_weight="1"
                android:textSize="12dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/proximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/botao"
                android:elevation="4dp"
                android:paddingLeft="55dp"
                android:paddingRight="55dp"
                android:textColor="#fff"
                android:text="@string/proximo"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:textSize="12dp"/>
        </RelativeLayout>


    </LinearLayout>


</LinearLayout>










