<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    >


    <TextView
        android:id="@+id/txt_taxa_alterada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="5dp"
        android:text="Você possui taxa alterada de:"
        android:textColor="@color/escuro"
        android:textSize="25sp"
        android:textStyle="bold"/>


    <CheckBox
        android:id="@+id/glicose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glicose"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/colesterol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colesterol"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/triglicerideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triglicerideo"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/creatinina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creatinina"
        android:textSize="18dp"/>

    <CheckBox
        android:id="@+id/acido_urico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acido_urico"
        android:textSize="18dp" />

    <CheckBox
        android:id="@+id/outra2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outra"
        android:textSize="18dp" />

    <!--
        <RadioGroup
            android:id="@+id/radio_taxa_alterada"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

        </RadioGroup>
    -->




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">


        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/qual"
                android:textSize="20dp"
                android:textColor="#000000"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/qual"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </RelativeLayout>


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="110dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/botao"
                android:elevation="4dp"
                android:paddingLeft="55dp"
                android:paddingRight="55dp"
                android:textColor="#fff"
                android:text="@string/salvar"
                android:layout_weight="1"
                android:textSize="12dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/proximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/botao"
                android:elevation="4dp"
                android:paddingLeft="55dp"
                android:paddingRight="55dp"
                android:textColor="#fff"
                android:text="@string/proximo"
                android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:textSize="12dp"/>
        </RelativeLayout>


    </LinearLayout>



</LinearLayout>