<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/perfilBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SEU PERFIL"
            android:textSize="55dp"
            android:layout_marginTop="75dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:text="Escolha seu perfil para que possamos personalizar a sua experiência no FILS"
            android:textSize="16dp"
            android:layout_marginTop="-3dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/atletaButton"
            android:text="@string/atleta"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/botao"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/personalButton"
            android:text="@string/personal_trainer"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/botao"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/nutricionistaButton"
            android:text="@string/nutricionista"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/botao"
            android:textColor="@color/white"/>


    </LinearLayout>
</RelativeLayout>